Project struture + models

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "moment": "^2.13.0",
     "moment-timezone": "^0.5.4",
     "mongoose": "^4.5.2",
+    "node-bcrypt": "0.0.1",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta3",
     "serve-favicon": "^2.3.0",
     "validator": "^5.4.0",
