--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/wspglobal/opsstatus#readme",
   "dependencies": {
+    "auto-load": "^2.1.0",
+    "bcryptjs-then": "^1.0.1",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
@@ -27,20 +29,25 @@
     "express": "^4.14.0",
     "express-session": "^1.13.0",
     "express-validator": "^2.20.8",
+    "font-awesome": "^4.6.3",
     "i18next": "^3.3.1",
     "i18next-express-middleware": "^1.0.1",
     "i18next-node-fs-backend": "^0.1.2",
     "ioredis": "^2.1.0",
+    "jquery": "^3.0.0",
     "lodash": "^4.13.1",
+    "modernizr": "^3.3.1",
     "moment": "^2.13.0",
     "moment-timezone": "^0.5.4",
     "mongoose": "^4.5.2",
     "node-bcrypt": "0.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pikaday": "^1.4.0",
     "pug": "^2.0.0-beta3",
     "serve-favicon": "^2.3.0",
     "validator": "^5.4.0",
+    "vue": "^1.0.26",
     "winston": "^2.2.0"
   },
   "devDependencies": {
