Minor fixes to config files

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,6 +1,7 @@
 {
    "title": "Ops Status",
    "host": "http://localhost",
+   "port": 80,
    "db": "mongodb://user:pass@localhost/opsstatus",
    "redis": {
       "host": "localhost",
