--- a/package.json
+++ b/package.json
@@ -29,21 +29,17 @@
     "express": "^4.14.0",
     "express-session": "^1.13.0",
     "express-validator": "^2.20.8",
-    "font-awesome": "^4.6.3",
     "i18next": "^3.3.1",
     "i18next-express-middleware": "^1.0.1",
     "i18next-node-fs-backend": "^0.1.2",
-    "ioredis": "^2.1.0",
-    "jquery": "^3.0.0",
+    "ioredis": "^2.2.0",
     "lodash": "^4.13.1",
-    "modernizr": "^3.3.1",
     "moment": "^2.13.0",
     "moment-timezone": "^0.5.4",
-    "mongoose": "^4.5.2",
+    "mongoose": "^4.5.3",
     "node-bcrypt": "0.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "pikaday": "^1.4.0",
     "pug": "^2.0.0-beta3",
     "serve-favicon": "^2.3.0",
     "validator": "^5.4.0",
@@ -55,6 +51,8 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "codacy-coverage": "^1.1.3",
+    "font-awesome": "^4.6.3",
+    "gridlex": "^2.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.10",
@@ -67,9 +65,12 @@
     "gulp-uglify": "^1.5.4",
     "gulp-zip": "^3.2.0",
     "istanbul": "^0.4.4",
+    "jquery": "^3.0.0",
     "merge-stream": "^1.0.0",
     "mocha": "^2.5.3",
     "mocha-lcov-reporter": "^1.2.0",
-    "nodemon": "^1.9.2"
+    "modernizr": "^3.3.1",
+    "nodemon": "^1.9.2",
+    "pikaday": "^1.4.0"
   }
 }
