Fix for Travis MongoDB not initially accepting connections

--- a/config.sample.json
+++ b/config.sample.json
@@ -7,5 +7,5 @@
       "host": "localhost",
       "port": "6379"
    },
-   "sessionSecret": "[LONG-SECRET-KEY-HERE]"
+   "sessionSecret": "1234567890abcdefghijklmnopqrstuvxyz"
 }
