--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-brute": "^0.7.0-beta.0",
+    "express-brute-redis": "0.0.1",
     "express-session": "^1.13.0",
     "express-validator": "^2.20.8",
     "i18next": "^3.3.1",
@@ -43,7 +45,6 @@
     "pug": "^2.0.0-beta3",
     "serve-favicon": "^2.3.0",
     "validator": "^5.4.0",
-    "vue": "^1.0.26",
     "winston": "^2.2.0"
   },
   "devDependencies": {
@@ -71,6 +72,9 @@
     "mocha-lcov-reporter": "^1.2.0",
     "modernizr": "^3.3.1",
     "nodemon": "^1.9.2",
-    "pikaday": "^1.4.0"
+    "pikaday": "^1.4.0",
+    "sortablejs": "^1.4.2",
+    "vex-js": "^2.3.4",
+    "vue": "^1.0.26"
   }
 }
