--- a/config.sample.json
+++ b/config.sample.json
@@ -7,5 +7,6 @@
       "host": "localhost",
       "port": "6379"
    },
-   "sessionSecret": "1234567890abcdefghijklmnopqrstuvxyz"
+   "sessionSecret": "1234567890abcdefghijklmnopqrstuvxyz",
+   "admin": "admin@company.com"
 }
