--- a/config.sample.yml
+++ b/config.sample.yml
@@ -17,6 +17,7 @@ host: http://localhost
 # ------------------------------------------------
 # Port the server should listen to (80 by default)
 # ------------------------------------------------
+# To use process.env.PORT, comment the line below:
 
 port: 80
 
