--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "url": "https://github.com/wspglobal/opsstatus/issues"
   },
   "homepage": "https://github.com/wspglobal/opsstatus#readme",
-  "engines" : {
-    "node" : ">=4.4.5"
+  "engines": {
+    "node": ">=4.4.5"
   },
   "dependencies": {
     "auto-load": "^2.1.0",
@@ -43,6 +43,7 @@
     "moment": "^2.13.0",
     "moment-timezone": "^0.5.4",
     "mongoose": "^4.5.3",
+    "mongoose-delete": "^0.3.4",
     "node-bcrypt": "0.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
