--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "nodemon": "^1.9.2",
     "pikaday": "^1.4.0",
     "sortablejs": "^1.4.2",
+    "timepicker": "^1.11.1",
     "vex-js": "^2.3.4",
     "vue": "^1.0.26"
   }
