--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "express-brute-redis": "0.0.1",
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
-    "i18next": "^3.3.1",
+    "gridlex": "^2.1.1",
+    "i18next": "^3.4.1",
     "i18next-express-middleware": "^1.0.1",
     "i18next-node-fs-backend": "^0.1.2",
     "ioredis": "^2.2.0",
@@ -42,17 +43,18 @@
     "lodash": "^4.13.1",
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.4",
-    "mongoose": "^4.5.3",
+    "mongoose": "^4.5.5",
     "mongoose-delete": "^0.3.4",
     "node-bcrypt": "0.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-localapikey": "0.0.3",
-    "pug": "^2.0.0-beta3",
+    "pug": "^2.0.0-beta4",
     "serve-favicon": "^2.3.0",
     "simplemde": "^1.11.2",
     "slug": "^0.9.1",
     "validator": "^5.4.0",
+    "vue-validator": "^2.1.3",
     "winston": "^2.2.0"
   },
   "devDependencies": {
