--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-localapikey": "0.0.3",
+    "promise-validate": "0.0.1",
     "pug": "^2.0.0-beta4",
     "serve-favicon": "^2.3.0",
     "simplemde": "^1.11.2",
