--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-localapikey": "0.0.3",
-    "promise-validate": "0.0.1",
     "pug": "^2.0.0-beta4",
     "serve-favicon": "^2.3.0",
     "simplemde": "^1.11.2",
     "slug": "^0.9.1",
     "validator": "^5.4.0",
+    "validator-as-promised": "^1.0.0",
     "vue-validator": "^2.1.3",
     "winston": "^2.2.0"
   },
