Update Incident + UI improvements + ChartJs + Dashboard logic (3)

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs-then": "^1.0.1",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "chart.js": "^2.2.1",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.1.0",
