--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ioredis": "^2.2.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.14.0",
+    "markdown-it": "^7.0.0",
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.4",
     "mongoose": "^4.5.7",
